# rules_js_alpha_test

./: .bazelignore  .gitignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
apps/docusaurus/: BUILD.bazel  docusaurus.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/docusaurus/docs/test/: index.mdx
apps/docusaurus/i18n/en/: code.json
apps/package-dep-override/: BUILD.bazel  index.js  package.json
apps/package-override/: BUILD.bazel  index.html  index.js  package.json
apps/remix/: BUILD.bazel  package.json
apps/remix/app/: BUILD.bazel
