"Bazel dependencies"

bazel_dep(name = "aspect_rules_js", version = "2.0.0-alpha.7", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)

#pnpm.pnpm(pnpm_version = "9.1.1")
use_repo(pnpm, "pnpm")
