load("@npm//apps/package-override:vite/package_json.bzl", vite_bin = "bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

vite_bin.vite(
    name = "app",
    srcs = [
        "index.html",
        "index.jsx",
        ":node_modules",
    ],
    args = [
        "build",
    ],
    chdir = package_name(),
    out_dirs = ["build"],
)
